--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,17 @@
 	<version>1.0.0</version>
 
 	<dependencies>
+	   <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19 </version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock</artifactId>
